--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-5">Best Framework for Exchange book,Insert your book and then find book that you like for exchange.</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="Books.html">LEARN MORE</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="Books.html#services1-k">LEARN MORE</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">LIVE DEMO</a></div>
             </div>
         </div>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="counters1 counters cid-rSmwXFYFiR" id="counters1-a">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="counters1 counters cid-rSmwXFYFiR" id="counters1-a">
 
     
 
@@ -146,7 +146,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJrQDbGNFjLxMRT1-AvhqF-7o" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJrQDbGNFjLxMRT1-AvhqF-7o" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <h2 class="pb-3 align-left mbr-fonts-style display-2">
@@ -173,7 +173,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rCfz3esGKMnBur67+YPemJYuhBGbKoCfrZezKxpXPnAEBVPSG8DqM4BRsFypSiLNc0kEEA4iJI/dqNwOOaToA6aY2aWcMczUNjrXV6ns7KKVtOw9napuWBaW6vQPsvwJ">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YD+0d4Hj22Bx4oqvmZQmsVUfre+eejmK/pE+STbYMfy9Lm+c1RoMLt2HUiAfmMVNtO/ZpxVd2UZpEeRrUvqX7zJbNAg6jZNHlXyFpT0Xm4Sn6VBDHkleEOTLGJ8tjb2Z">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
